Reetan.Nayak Dev 25/force-app/main/default/objects/Country_List__c/Country_List__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>mapping for country code, country long name and pole.</description>
    <label>Country List</label>
</CustomObject>