Reetan.Nayak Dev 25/force-app/main/default/objects/Country_List__c/fields/Country_Long_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Long_Name__c</fullName>
    <description>long name equivalent of country iso code</description>
    <label>Country Long Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>