Reetan.Nayak Dev 25/force-app/main/default/objects/Country_List__c/fields/Enable_State_province_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Enable_State_province_Picklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable State/province Picklist</label>
    <type>Checkbox</type>
</CustomField>