Reetan.Nayak Dev 25/force-app/main/default/objects/Country_List__c/fields/Global_Region__c.field-meta.xml
<CustomField>
    <fullName>Global_Region__c</fullName>
    <label>Global Region</label>
    <length>20</length>
    <type>Text</type>
</CustomField>