Reetan.Nayak Dev 25/force-app/main/default/objects/Country_List__c/fields/Page_Template__c.field-meta.xml
<CustomField>
    <fullName>Page_Template__c</fullName>
    <label>Page Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>