Reetan.Nayak Dev 25/force-app/main/default/objects/Country_List__c/fields/Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region__c</fullName>
    <description>Sub-Region of Country</description>
    <label>Sub-Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>